# Flame-ADE

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  FLAME.md  LAUNCH.md  PLAN.md  README.md  SECURITY.md  WORKFLOW.md  components.json  index.html  opencode.json  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/workflows/: ci.yml  release.yml
.opencode/agents/: ai-engineer.md  architect.md  docs-writer.md  frontend-dev.md  qa-tester.md  release-manager.md  rust-dev.md  security-auditor.md
.opencode/commands/: audit.md  build.md  dev.md  lint.md  test.md
.opencode/skills/ai-integration/: SKILL.md
.opencode/skills/macos-tahoe-compat/: SKILL.md
.opencode/skills/rust-pty/: SKILL.md
.opencode/skills/tauri-setup/: SKILL.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/modules/: mod.rs  net.rs  proc.rs  secrets.rs  workspace.rs
src-tauri/src/modules/fs/: file.rs  grep.rs  mod.rs  mutate.rs  search.rs  tree.rs
src-tauri/src/modules/git/: mod.rs
src-tauri/src/modules/pty/: commands.rs  mod.rs  session.rs  shell_init.rs
src-tauri/src/modules/pty/scripts/: bashrc.bash  zshenv.zsh  zshrc.zsh
src-tauri/src/modules/secrets/: mod.rs
src-tauri/src/modules/shell/: background.rs  mod.rs  ringbuffer.rs  session.rs
src-tauri/src/modules/terminal/: mod.rs
src-tauri/tests/: integration_test.rs
src/components/: WindowControls.tsx
src/components/ai-elements/: chat-code-lezer.ts  chat-code.tsx  index.ts  markdown-code.tsx  shimmer.tsx
src/components/ui/: FlameLogo.tsx  GlassPanel.tsx  alert-dialog.tsx  button.tsx  checkbox.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  spinner.tsx  textarea.tsx  tooltip.tsx
src/lib/: fonts.ts  platform.ts  utils.test.ts
src/modules/ai/: index.ts
src/modules/editor/: EditorStack.tsx  index.ts
src/modules/explorer/: ExplorerPanel.tsx  FileTree.tsx  index.ts
src/modules/git-history/: GitHistoryPane.tsx  GitHistoryStack.tsx  GitHistoryStackLazy.tsx  (+3 more)
src/settings/: main.tsx
src/styles/: globals.css
src/test/: App.test.tsx  setup.ts
(+115 files in other folders)
