[package]
name = "flame-ade"
version = "0.6.0"
description = "AI-native terminal emulator"
authors = ["Flame ADE Contributors"]
edition = "2021"

[lib]
name = "flame_ade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "flame-ade"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
keyring = { version = "3", features = ["apple-native"] }
walkdir = "2"
regex = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
