[package]
name = "flame-ade"
version = "1.0.0"
description = "AI-native terminal emulator"
authors = ["Flame ADE Contributors"]
edition = "2021"

[lib]
name = "flame_ade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "flame-ade"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
keyring = { version = "3", features = ["apple-native"] }
walkdir = "2"
regex = "1"
ignore = "0.4"
shared_child = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["rt"] }
tempfile = "3"
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
